# whisdom

./: .env.example  .gitignore  AGENTS.md  LICENSE  components.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
.omo/drafts/: drive-and-server-transcription.md
.omo/evidence/: task-T1-worker-auth.txt  task-T2-drive-upload.txt
.omo/plans/: drive-and-server-transcription.md
.omo/run-continuation/: ses_0fe054ec9ffek3fuVWEPdpT3qK.json  ses_10200d807ffe9ZKSgeUknkj3Xb.json  ses_102010778ffem3XZwxRH2hUrDx.json  ses_1020138bdffe6NtegThQZaz9QS.json  ses_102020e22ffeLcRVwvnc7QNxUR.json
public/: CNAME
server/: .env.example  Cargo.toml  Dockerfile  README.md  config.toml
server/scripts/: download-model.sh
server/src/: auth.rs  config.rs  error.rs  job.rs  logging.rs  main.rs  models.rs  queue.rs  turnstile.rs
server/src/pipeline/: download.rs  extract.rs  mod.rs  run.rs  transcribe.rs
server/src/routes/: cancel.rs  capabilities.rs  mod.rs  progress.rs  transcribe.rs
src/: App.tsx  index.css
src/components/: theme-provider.tsx
src/components/ui/: badge.tsx  button.tsx  (+4 more)
src/lib/: id.ts  transcription-worker-client.ts
src/workers/: ffmpeg.worker.ts  transcription.worker.ts
tests/e2e/: real-transcription.spec.ts  server-mode.spec.ts  whisdom.spec.ts
tests/unit/: exports.test.ts  language.test.ts  models.test.ts  preflight.test.ts  server-api.test.ts  storage-cleanup.test.ts
worker/: package.json  tsconfig.json  wrangler.jsonc
worker/src/: index.ts
(+21 files in other folders)
