[package]
name = "whisdom-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tempfile = "3"
futures = "0.3"
dotenvy = "0.15"
toml = "0.8"
whisper-rs = "0.16"
hound = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
